--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "tests:chrome": "playwright test --config=playwright.config.ts --project=Chromium",
         "tests:firefox": "playwright test --config=playwright.config.ts --project=Firefox",
         "tests:webkit": "playwright test --config=playwright.config.ts --project=Webkit",
-        "tests:e2e": "playwright test --config=end-to-end.config.ts --project=Chromium"
+        "tests:e2e": "playwright test --config=end-to-end.config.ts --project=Chromium",
+        "tests:visual-ff": "playwright test --config=visual.config.ts --project=Firefox",
+        "tests:visual-chromium": "playwright test --config=visual.config.ts --project=Chromium",
+        "tests:visual-webkit": "playwright test --config=visual.config.ts --project=Webkit"
     },
     "keywords": [
         "Automation",
