--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
         "tests:firefox": "playwright test --config=playwright.config.ts --project=Firefox",
         "tests:webkit": "playwright test --config=playwright.config.ts --project=Webkit",
         "tests:e2e": "playwright test --config=end-to-end.config.ts --project=Chromium",
-        "tests:visual-ff": "playwright test --config=visual.config.ts --project=Firefox",
-        "tests:visual-chromium": "playwright test --config=visual.config.ts --project=Chromium",
-        "tests:visual-webkit": "playwright test --config=visual.config.ts --project=Webkit"
+        "tests:visual:firefox": "playwright test --config=visual.config.ts --project=Firefox",
+        "tests:visual:chromium": "playwright test --config=visual.config.ts --project=Chromium",
+        "tests:visual:webkit": "playwright test --config=visual.config.ts --project=Webkit",
+        "tests:visual:firefox:update":"playwright test --config=visual.config.ts --project=FireFox --update=snapshots",
+        "tests:visual:chromium:update":"playwright test --config=visual.config.ts --project=Chromium --update=snapshots",
+        "tests:visual:webkit:update":"playwright test --config=visual.config.ts --project=Webkit --update=snapshots"
     },
     "keywords": [
         "Automation",
