--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
         "tests:visual:firefox": "playwright test --config=visual.config.ts --project=Firefox",
         "tests:visual:chromium": "playwright test --config=visual.config.ts --project=Chromium",
         "tests:visual:webkit": "playwright test --config=visual.config.ts --project=Webkit",
-        "tests:visual:firefox:update":"playwright test --config=visual.config.ts --project=FireFox --update=snapshots",
-        "tests:visual:chromium:update":"playwright test --config=visual.config.ts --project=Chromium --update=snapshots",
-        "tests:visual:webkit:update":"playwright test --config=visual.config.ts --project=Webkit --update=snapshots"
+        "tests:visual:firefox:update": "playwright test --config=visual.config.ts --project=FireFox --update=snapshots",
+        "tests:visual:chromium:update": "playwright test --config=visual.config.ts --project=Chromium --update=snapshots",
+        "tests:visual:webkit:update": "playwright test --config=visual.config.ts --project=Webkit --update=snapshots",
+        "tests:api": "playwright test --config=api.config.ts --project=Chromium"
     },
     "keywords": [
         "Automation",
